tests/lexer/invalid/test_invalid_escape.src
"string with
newline inside"
"unterminated with escape \